# papers

./: .gitignore  README.md
api/: .env  Cargo.toml  diesel.toml  text.txt
api/migrations/2025-08-13-161306_create_docs/: up.sql
api/src/: main.rs  models.rs  s3.rs  schema.rs  utils.rs
api/tmp/index/: .managed.json  meta.json
ui/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
ui/app/: app.vue  components.d.ts
ui/app/components/: DocumentCard.vue
ui/app/layouts/: default.vue
ui/app/pages/: documents.vue  index.vue
