[package]
name = "explore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"]}
rusty-tesseract = "1.1.10"
tantivy = "0.24.2"
tempfile = "3.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142"}
tower-http = { version = "0.6", features = ["cors"] }
