[package]
name = "explore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"]}
rusty-tesseract = "1.1.10"
tantivy = "0.24.2"
tempfile = "3.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142"}
tower-http = { version = "0.6", features = ["fs", "cors"] }
pdfium-render = "0.8.4"
image = {version = "0.25", features = ["png"]}
uuid = { version = "1.18.0", features = ["v4"] }
regex = "1.11.1"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
chrono = "0.4.41"
tokio-util = "0.7.16"
